Initialize Docs repository: https://github.com/OPS-E2E-PPE/E2E-LinkedPublishRepo-20220822155517 of branch main

--- a/.openpublishing.publish.config.json
+++ b/.openpublishing.publish.config.json
@@ -18,8 +18,7 @@
   "notification_subscribers": [],
   "sync_notification_subscribers": [],
   "branches_to_filter": [],
-  "skip_source_output_uploading": false,
-  "need_preview_pull_request": true,
+  "need_preview_pull_request": false,
   "dependent_repositories": [
     {
       "path_to_root": "_themes",
@@ -28,5 +27,7 @@
       "branch_mapping": {}
     }
   ],
-  "branch_target_mapping": {}
+  "branch_target_mapping": {},
+  "targets": {},
+  "skip_source_output_uploading": false
 }
